--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,7 @@ onnx-graphsurgeon==0.5.2
 tensorflow==2.12.0
 onnx2tf==1.8.1
 h5py==3.11.0
+# UI
+ipyfilechooser==0.6.0
+ipywidgets==8.1.3
+jupyterlab
