--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ plyfile
 seaborn
 
 # https://github.com/Megvii-BaseDetection/YOLOX/blob/618fd8c08b2bc5fac9ffbb19a3b7e039ea0d5b9a/requirements.txt#L16-L18
-protobuf==3.20.2
+protobuf==3.20.3
 onnx==1.16.0
 onnx-simplifier==0.4.10
 pycocotools>=2.0.2
@@ -22,6 +22,7 @@ onnxruntime>=0.14.1
 # ONNX2TF
 onnx-graphsurgeon==0.5.2
 tensorflow==2.12.0
+sng4onnx
 onnx2tf==1.8.1
 h5py==3.11.0
 # UI
